# zog

./: .gitignore  Makefile  _config.yml  main.py  pyproject.toml  ruff.toml
zog/: main.py
