[tool.poetry]
name = "zog"
version = "0.0.0"
description = "ZOtero knowledge Graph GraphML creator"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["zotero", "knowledge graph", "graph", "network", "networkx"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.13"
pyzotero = "^1.6.11"
matplotlib = "^3.10.3"
networkx = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
